src/main/java/example/presentation/view/errors/CustomErrorAttributes.java
package example.presentation.view.errors;

import org.springframework.boot.autoconfigure.web.DefaultErrorAttributes;
import org.springframework.web.context.request.RequestAttributes;

import java.util.Map;

public class CustomErrorAttributes extends DefaultErrorAttributes {

    @Override
    public Map<String, Object> getErrorAttributes(RequestAttributes requestAttributes,
                                                  boolean includeStackTrace) {
        Map<String, Object> errorAttributes = super.getErrorAttributes(requestAttributes,includeStackTrace);
        // 内容を必要に応じて書き換える
        return errorAttributes;
    }
}
